<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_repos"
            android:title="@string/menu_repos" />
        <item
            android:id="@+id/nav_unzip"
            android:icon="@drawable/ic_nav_unzip"
            android:title="@string/menu_unzip" />
        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/ic_nav_files"
            android:title="@string/menu_files" />
        <item
            android:id="@+id/nav_releases"
            android:icon="@drawable/ic_nav_releases"
            android:title="@string/menu_releases" />
        <item
            android:id="@+id/nav_tokens"
            android:icon="@drawable/ic_nav_key"
            android:title="@string/menu_tokens" />
    </group>
    <item
        android:id="@+id/nav_section_other"
        android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/nav_refresh"
                android:icon="@drawable/ic_nav_refresh"
                android:title="@string/refresh" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_nav_info"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>
