<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_repos"
        android:title="@string/bottom_repos" />
    <item
        android:id="@+id/nav_unzip"
        android:icon="@drawable/ic_nav_unzip"
        android:title="@string/bottom_unzip" />
    <item
        android:id="@+id/nav_files"
        android:icon="@drawable/ic_nav_files"
        android:title="@string/bottom_files" />
    <item
        android:id="@+id/nav_releases"
        android:icon="@drawable/ic_nav_releases"
        android:title="@string/bottom_releases" />
    <item
        android:id="@+id/nav_tokens"
        android:icon="@drawable/ic_nav_key"
        android:title="@string/bottom_tokens" />
</menu>
